                    *************************
                    ** afex VERSION 0.17-x **
                    *************************
                    
                    Changes in afex Version 0.17-x
                    Released XXX 2017

    Significant User Visible Changes and New Features

    o   All arguments with "." in the name have been renamed to use "_". The old
        names have been deprecated (i.e., still work, but should not be used).
        check.contrasts = check_contrasts, test.intercept = test_intercept,
        args.test = args_test, ...
        
    o   Names of slots of mixed model objects with "." have been renamed to have
        a "_" instead: full.model = full_model and restricted.models = 
        restricted_models
        
    o   afex_options() now uses the global R options accessible via options() 
        (with prefix afex.) and allows to reset all options via list (i.e.,:
        aop <- afex_options(); ...; afex_options(aov); works).
        
    o   renamed allFit() to all_fit() and argument meth.tab to meth_tab. 
        Added method dfoptim::nmkb() to all_fit(). To use nmkb, dfoptim needs to
        be loaded explicitly via library (see examples). 
        
    o   added argument all_fit to mixed(). If TRUE, each model is fitted with 
        all available optimizers and the best fit in each case selected.
        
    o   mixed objects have an additional slot, "data", that contains the data 
        used for fitting.
        
    Bugfixes

    o   Sphericity correction now correctly displayed as none if all within-
        factors have only two levels (bug removed by Frederik Aust).
        
    o   removed bug when calling nice() on afex_aov objects created with 
        explicit effect size.
        
    o   aov_...(): anova_table = list(intercept = TRUE) now correctly suppresses
        the intercept (bug removed by Frederik Aust).
        