@@ -24,6 +24,7 @@ export(aov_ez)
 export(compare.2.vectors)
 export(ems)
 export(ez.glm)
+export(lmer)
 export(lmer_alt)
 export(mixed)
 export(nice)
@@ -53,9 +54,9 @@ importFrom(lme4,glmer)
 importFrom(lme4,glmerControl)
 importFrom(lme4,isGLMM)
 importFrom(lme4,isREML)
-importFrom(lme4,lmer)
 importFrom(lme4,lmerControl)
 importFrom(lme4,nobars)
+importFrom(lmerTest,lmer)
 importFrom(lsmeans,lsm.basis)
 importFrom(lsmeans,recover.data)
 importFrom(methods,is)
