@@ -4,8 +4,8 @@
 #' Package: \tab afex\cr
 #' Type: \tab Package\cr
 #' Version: \tab 0.17-3\cr
-#' Date: \tab 2017-03-03\cr
-#' Depends: \tab R (>= 3.1.0), lme4 (>= 1.1-8), reshape2, lsmeans (>= 2.17)\cr
+#' Date: \tab 2017-03-09\cr
+#' Depends: \tab R (>= 3.1.0), lme4 (>= 1.1-8), lsmeans (>= 2.17)\cr
 #' Encoding: \tab UTF-8\cr
 #' License: \tab GPL (>=2)\cr
 #' URL: \tab https://github.com/singmann/afex\cr
