@@ -1,0 +1,7 @@
+### lme4
+
+#' @importFrom lmerTest lmer
+
+#' @export
+lmerTest::lmer
+
