@@ -10,7 +10,8 @@
     afex.return_aov = "afex_aov",
     afex.es_aov = "ges",
     afex.correction_aov = "GG",
-    afex.factorize = TRUE
+    afex.factorize = TRUE,
+    afex.lmer_function = "lmerTest"
   )
   toset <- !(names(op.afex) %in% names(op))
   if(any(toset)) options(op.afex[toset])
