@@ -50,9 +50,9 @@ roxy.package(
         person(given=\"Ulf\", family=\"Mertens\", role=c(\"ctb\")),
         person(given=\"Jonathan\", family=\"Love\", role=c(\"ctb\"))
     )",
-		Depends = "R (>= 3.1.0), lme4 (>= 1.1-8), reshape2, lsmeans (>= 2.17)",
+		Depends = "R (>= 3.1.0), lme4 (>= 1.1-8), lsmeans (>= 2.17)",
 		Suggests = "ascii, xtable, parallel, plyr, optimx, nloptr, knitr, rmarkdown, lattice, multcomp, testthat, mlmRev, dplyr,dfoptim",
-		Imports = "stringr, coin, Matrix (>= 1.1.1), pbkrtest (>= 0.4-1), car, stats, methods",
+		Imports = "stringr, coin, Matrix (>= 1.1.1), pbkrtest (>= 0.4-1), lmerTest, car, reshape2, stats, methods",
 		Description = "Provides convenience functions for analyzing factorial experiments using ANOVA or mixed models. aov_ez(), aov_car(), and aov_4() allow specification of between, within (i.e., repeated-measures), or mixed between-within (i.e., split-plot) ANOVAs for data in long format (i.e., one observation per row), potentially aggregating multiple observations per individual and cell of the design. mixed() fits mixed models using lme4::lmer() and computes p-values for all fixed effects using either Kenward-Roger approximation for degrees of freedom (LMM only), parametric bootstrap (LMMs and GLMMs), or likelihood ratio tests (LMMs and GLMMs). afex uses type 3 sums of squares as default (imitating commercial statistical software).",
 		URL = "https://github.com/singmann/afex",
 		License = "GPL (>=2)",
