@@ -155,6 +155,7 @@ sk_m1 <- mixed(response ~ instruction*inference*type+(inference*type|id), sk2_af
 sk_m1 # prints ANOVA table with nicely rounded numbers (i.e., as characters)
 nice(sk_m1)  # returns the same but without printing potential warnings
 anova(sk_m1) # returns and prints numeric ANOVA table (i.e., not-rounded)
+lmerTest::anova(sk_m1$full_model) # p-value susing Satterthwaite approximation
 summary(sk_m1) # lmer summary of full model
 
 # suppressing correlation among random slopes:
