@@ -7,6 +7,10 @@
 
     Significant User Visible Changes and New Features
 
+    o   mixed() now per default exports and uses lmerTest::lmer and not 
+        lme4::lmer(). This allows to easily use the Satterthwaite approximation 
+        for obtaining p-values.
+    
     o   All arguments with "." in the name have been renamed to use "_". The old
         names have been deprecated (i.e., still work, but should not be used).
         check.contrasts = check_contrasts, test.intercept = test_intercept,
